Add name variations for SEO: Parag Dalsania, Parag Dalsania MD

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>FUSCION | Dr. Parag Dalsania - Presence, Alignment & Transformation</title>
     <meta name="title" content="FUSCION | Dr. Parag Dalsania - Presence, Alignment & Transformation" />
     <meta name="description" content="FUSCION by Dr. Parag Dalsania - A physician, educator, and facilitator of presence helping individuals find alignment, health, and meaningful transformation. Flow gently into a healthy, meaningful life." />
-    <meta name="keywords" content="Dr. Parag Dalsania, FUSCION, wellness, presence, alignment, transformation, health coaching, mindfulness, physician, holistic health" />
+    <meta name="keywords" content="Dr. Parag Dalsania, Parag Dalsania, Parag Dalsania MD, Dr. Dalsania, FUSCION, wellness, presence, alignment, transformation, health coaching, mindfulness, physician, holistic health" />
     <meta name="author" content="Dr. Parag Dalsania" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.fuscion.com" />
@@ -35,7 +35,10 @@
         {
           "@type": "Person",
           "name": "Dr. Parag Dalsania",
+          "alternateName": ["Parag Dalsania", "Parag Dalsania MD", "Dr. Dalsania"],
           "jobTitle": "Physician, Educator, Facilitator of Presence",
+          "honorificPrefix": "Dr.",
+          "honorificSuffix": "MD",
           "description": "Physician, educator, and facilitator of presence helping individuals find alignment and meaningful transformation.",
           "url": "https://www.fuscion.com",
           "sameAs": []
